--- a/html/MyEnglishGreekDict1.html
+++ b/html/MyEnglishGreekDict1.html
@@ -11,15 +11,6 @@
       <mbp:pagebreak/>
       <idx:entry name="word" scriptable="yes">
         <h2>
-          <idx:orth>Darius</idx:orth><idx:key key="Darius">
-        </h2>
-        <b>[Ουσ.]</b> Δαρείος [Ονομασία πολλών περσών βασιλιάδων]
-
-
-      </idx:entry>
-      <mbp:pagebreak/>
-            <idx:entry name="word" scriptable="yes">
-        <h2>
           <idx:orth>dark|darker|darkest</idx:orth><idx:key key="dark|darker|darkest">
         </h2>
         <b>[Ουσ.]</b> σκοτάδι, νύχτωμα ▪ άγνοια ▪ <b>[Επίθ.]</b> σκοτεινός, μαύρος ▪ σκούρος, μελαχροινός, κλειστός - βαθύς (για χρώμα ▪ σκυθρωπός, μελαγχολικός ▪ μυστηριώδης, καταχθόνιος, απαίσιος ▪ δυσνόητος, ασαφής ▪ κρυφός
@@ -1417,7 +1408,7 @@
         <h2>
           <idx:orth>dear|dearer|dearest</idx:orth><idx:key key="dear|dearer|dearest">
         </h2>
-        <b>[Επίθ.]</b> αγαπητός, προσφιλής, αγαπημένος ▪ δαπανηρός, ακριβός ▪ ευγενικός <b>[Ουσ.]</b> κάποιος αγαπητός <b>[Επίρρ.]</b> σε υψηλή τιμή, ακριβά [<b>[Επιφ.]</b>] έκφραση χαράς ή λύπης.
+        <b>[Επίθ.]</b> αγαπητός, προσφιλής, αγαπημένος ▪ δαπανηρός, ακριβός ▪ ευγενικός <b>[Ουσ.]</b> κάποιος αγαπητός <b>[Επίρρ.]</b> σε υψηλή τιμή, ακριβά <b>[Επιφ.]</b> έκφραση χαράς ή λύπης.
 
 
       </idx:entry>
@@ -8608,7 +8599,7 @@
         <h2>
           <idx:orth>despite</idx:orth><idx:key key="despite">
         </h2>
-        <b>[Ουσ.]</b> κακία, μοχθηρία ▪ προσβολή, περιφρόνηση ▪ <b>[Πρόθ.]</b> σε πείσμα του..., παρά το... π.χ. Despite the bad weather, we had a picnic at the beach.
+        <b>[Ουσ.]</b> κακία, μοχθηρία ▪ προσβολή, περιφρόνηση ▪ <b><b>[Πρόθ.]</b></b> σε πείσμα του..., παρά το... π.χ. Despite the bad weather, we had a picnic at the beach.
 
 
       </idx:entry>
@@ -13891,7 +13882,7 @@
         <h2>
           <idx:orth>discordance</idx:orth><idx:key key="discordance">
         </h2>
-        <b>[Ουσ.]</b> διαφωνία, ασυμφωνία ▪ διένεξη, έριδα ▪ παραφωνία, κακοφωνία (μ<b>[Ουσ.]</b>)
+        <b>[Ουσ.]</b> διαφωνία, ασυμφωνία ▪ διένεξη, έριδα ▪ παραφωνία, κακοφωνία <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -24034,7 +24025,7 @@
         <h2>
           <idx:orth>during</idx:orth><idx:key key="during">
         </h2>
-        <b>[Πρόθ.]</b> κατά την διάρκεια, ενόσω πχ: During the war, many of our villages and towns were burnt down by the invaders.
+        <b><b>[Πρόθ.]</b></b> κατά την διάρκεια, ενόσω πχ: During the war, many of our villages and towns were burnt down by the invaders.
 
 
       </idx:entry>
@@ -28174,7 +28165,7 @@
         <h2>
           <idx:orth>elastic|elastics</idx:orth><idx:key key="elastic|elastics">
         </h2>
-        <b>[Επίθ.]</b> ελαστικός, εύκαμπτος ▪ που προσαρμόζεται εύκολα (μτφ.) <b>[Ουσ.]</b> ελαστικό (<b>[Ουσ.]</b>)
+        <b>[Επίθ.]</b> ελαστικός, εύκαμπτος ▪ που προσαρμόζεται εύκολα (μτφ.) <b>[Ουσ.]</b> ελαστικό <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -28246,7 +28237,7 @@
         <h2>
           <idx:orth>elder|elders</idx:orth><idx:key key="elder|elders">
         </h2>
-        <b>[Επίθ.]</b> μεγαλύτερος (σε ηλικία), γεροντότερος ▪ ο μεγαλύτερος, (<b>[Ουσ.]</b>)
+        <b>[Επίθ.]</b> μεγαλύτερος (σε ηλικία), γεροντότερος ▪ ο μεγαλύτερος, <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -32503,7 +32494,7 @@
         <h2>
           <idx:orth>enharmonic</idx:orth><idx:key key="enharmonic">
         </h2>
-        <b>[Επίθ.]</b> εναρμόνιος (μ<b>[Ουσ.]</b>)
+        <b>[Επίθ.]</b> εναρμόνιος <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -36652,7 +36643,7 @@
         <h2>
           <idx:orth>eureka</idx:orth><idx:key key="eureka">
         </h2>
-        [<b>[Επιφ.]</b>] εύρηκα! <b>[Ουσ.]</b> κράμα χαλκού και νικέλιου που χρησιμοποιείται ως ηλ. αντίσταση
+        <b>[Επιφ.]</b> εύρηκα! <b>[Ουσ.]</b> κράμα χαλκού και νικέλιου που χρησιμοποιείται ως ηλ. αντίσταση
 
 
       </idx:entry>
@@ -38029,7 +38020,7 @@
         <h2>
           <idx:orth>ex</idx:orth><idx:key key="ex">
         </h2>
-        <b>[Πρόθ.]</b> από, εκ, εξω ▪ χωρίς ▪ πέρα από ▪ πρώην
+        <b><b>[Πρόθ.]</b></b> από, εκ, εξω ▪ χωρίς ▪ πέρα από ▪ πρώην
 
 
       </idx:entry>
@@ -38425,7 +38416,7 @@
         <h2>
           <idx:orth>except|excepted|excepting|excepts</idx:orth><idx:key key="except|excepted|excepting|excepts">
         </h2>
-        <b>[Ρήμ.]</b> εξαιρώ, αποκλείω ▪ αντιτίθεμαι, ενίσταμαι, υποβάλλω ένσταση ▪ αποκρούω Σύνδ. εκτός αν, <b>[Πρόθ.]</b> πλήν, εκτός
+        <b>[Ρήμ.]</b> εξαιρώ, αποκλείω ▪ αντιτίθεμαι, ενίσταμαι, υποβάλλω ένσταση ▪ αποκρούω Σύνδ. εκτός αν, <b><b>[Πρόθ.]</b></b> πλήν, εκτός
 
 
       </idx:entry>
@@ -38443,7 +38434,7 @@
         <h2>
           <idx:orth>excepting</idx:orth><idx:key key="excepting">
         </h2>
-        <b>[Πρόθ.]</b> εξαιρουμένου...
+        <b><b>[Πρόθ.]</b></b> εξαιρουμένου...
 
 
       </idx:entry>
@@ -43042,7 +43033,7 @@
         <h2>
           <idx:orth>facet|faceted|faceting|facets</idx:orth><idx:key key="facet|faceted|faceting|facets">
         </h2>
-        <b>[Ουσ.]</b> εδρα επεξεργασμένου πολύτιμου λίθου.▪ όψη ▪ πλευρά διαμαντιού ▪ <b>[Ρήμ.]</b>  κόβω πολυεδρικά.
+        <b>[Ουσ.]</b> εδρα επεξεργασμένου πολύτιμου λίθου ▪ όψη ▪ πλευρά διαμαντιού ▪ <b>[Ρήμ.]</b>  κόβω πολυεδρικά.
 
 
       </idx:entry>
@@ -52708,7 +52699,7 @@
         <h2>
           <idx:orth>flat|flats|flatter|flattest</idx:orth><idx:key key="flat|flats|flatter|flattest">
         </h2>
-        <b>[Επίθ.]</b> επίπεδος ▪ λείος, ομαλός, ίσιος ▪ πλατύς, φλάτ▪ άτονος, θαμπός, υποτονικός ▪ ενιαίος, σταθερός, αμετάβλητος ▪ κατηγορηματικός, απόλυτος ▪ ξεθυμασμένος (για αεριούχα ποτά ▪ που δεν έχει τακούνι, που μοιάζει με παντόφλα ▪ <b>[Ουσ.]</b> διαμέρισμα (πολυκατοικίας ▪ ύφεση (μ<b>[Ουσ.]</b>) π.χ. When she got home she found that her flat had been burgled
+        <b>[Επίθ.]</b> επίπεδος ▪ λείος, ομαλός, ίσιος ▪ πλατύς, φλάτ▪ άτονος, θαμπός, υποτονικός ▪ ενιαίος, σταθερός, αμετάβλητος ▪ κατηγορηματικός, απόλυτος ▪ ξεθυμασμένος (για αεριούχα ποτά ▪ που δεν έχει τακούνι, που μοιάζει με παντόφλα ▪ <b>[Ουσ.]</b> διαμέρισμα (πολυκατοικίας ▪ ύφεση <b>[Ουσ.]</b> π.χ. When she got home she found that her flat had been burgled
 
 
       </idx:entry>
@@ -55543,7 +55534,7 @@
         <h2>
           <idx:orth>for</idx:orth><idx:key key="for">
         </h2>
-        <b>[Πρόθ.]</b> για ▪ πρός,  ▪ Σύνδ. εξαιτίας, καθότι, διότι ▪ χάριν, υπερ▪ ως, σαν
+        <b><b>[Πρόθ.]</b></b> για ▪ πρός,  ▪ Σύνδ. εξαιτίας, καθότι, διότι ▪ χάριν, υπερ▪ ως, σαν
 
 
       </idx:entry>
@@ -60871,7 +60862,7 @@
         <h2>
           <idx:orth>from</idx:orth><idx:key key="from">
         </h2>
-        <b>[Πρόθ.]</b> από, εκ, εξ, πχ: He came from school.
+        <b><b>[Πρόθ.]</b></b> από, εκ, εξ, πχ: He came from school.
 
 
       </idx:entry>
@@ -63319,7 +63310,7 @@
         <h2>
           <idx:orth>gad|gadded|gadding|gads</idx:orth><idx:key key="gad|gadded|gadding|gads">
         </h2>
-        <b>[Ουσ.]</b> λοστός, ράβδος, αιχμή, μύτη (βέλους) ▪ <b>[Ρήμ.]</b> περιφέρομαι ▪ [<b>[Επιφ.]</b>] μα το θεό!
+        <b>[Ουσ.]</b> λοστός, ράβδος, αιχμή, μύτη (βέλους) ▪ <b>[Ρήμ.]</b> περιφέρομαι ▪ <b>[Επιφ.]</b> μα το θεό!
 
 
       </idx:entry>
@@ -71176,7 +71167,7 @@
         <h2>
           <idx:orth>golly</idx:orth><idx:key key="golly">
         </h2>
-        [<b>[Επιφ.]</b>] τί λές!, θεέ μου!
+        <b>[Επιφ.]</b> τί λές!, θεέ μου!
 
 
       </idx:entry>
@@ -71509,7 +71500,7 @@
         <h2>
           <idx:orth>good God</idx:orth><idx:key key="good God">
         </h2>
-        [<b>[Επιφ.]</b>] έκφρ. Θεέ μου!
+        <b>[Επιφ.]</b> έκφρ. Θεέ μου!
 
 
       </idx:entry>
@@ -71977,7 +71968,7 @@
         <h2>
           <idx:orth>goodbye</idx:orth><idx:key key="goodbye">
         </h2>
-        [<b>[Επιφ.]</b>] αντίο
+        <b>[Επιφ.]</b> αντίο
 
 
       </idx:entry>
@@ -72040,7 +72031,7 @@
         <h2>
           <idx:orth>goodness gracious</idx:orth><idx:key key="goodness gracious">
         </h2>
-        [<b>[Επιφ.]</b>] έκφρ. Θεέ μου!!! έλα θεέ μου!!!  (Δηλώνει απορία ή σάστισμα)
+        <b>[Επιφ.]</b> έκφρ. Θεέ μου!!! έλα θεέ μου!!!  (Δηλώνει απορία ή σάστισμα)
 
 
       </idx:entry>
@@ -77989,7 +77980,7 @@
         <h2>
           <idx:orth>ha</idx:orth><idx:key key="ha">
         </h2>
-        [<b>[Επιφ.]</b>] χα!
+        <b>[Επιφ.]</b> χα!
 
 
       </idx:entry>
@@ -79501,7 +79492,7 @@
         <h2>
           <idx:orth>halftone|halftones</idx:orth><idx:key key="halftone|halftones">
         </h2>
-        ημιτόνιο (μ<b>[Ουσ.]</b>)
+        ημιτόνιο <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -84019,7 +84010,7 @@
         <h2>
           <idx:orth>heaven forbid</idx:orth><idx:key key="heaven forbid">
         </h2>
-        [<b>[Επιφ.]</b>] έκφρ. Θεός φυλάξοι,  (Έκφραση που δηλώνει ότι πίστεύουμαι ότι κάτι δεν έχει συμβεί)
+        <b>[Επιφ.]</b> έκφρ. Θεός φυλάξοι,  (Έκφραση που δηλώνει ότι πίστεύουμαι ότι κάτι δεν έχει συμβεί)
 
 
       </idx:entry>
@@ -86458,7 +86449,7 @@
         <h2>
           <idx:orth>hey</idx:orth><idx:key key="hey">
         </h2>
-        [<b>[Επιφ.]</b>] ε!,
+        <b>[Επιφ.]</b> ε!,
 
 
       </idx:entry>
@@ -86485,7 +86476,7 @@
         <h2>
           <idx:orth>hi</idx:orth><idx:key key="hi">
         </h2>
-        [<b>[Επιφ.]</b>] γεια!, ε! εσύ εκεί!
+        <b>[Επιφ.]</b> γεια!, ε! εσύ εκεί!
 
 
       </idx:entry>
@@ -89059,7 +89050,7 @@
         <h2>
           <idx:orth>holdout|holdouts</idx:orth><idx:key key="holdout|holdouts">
         </h2>
-        [Ουσ.] διαπραγματευτής ή πωλητής που επιμένει στις αρχικές του απαιτήσεις (με την ελπίδα για κάτι καλύτερο)
+        <b>[Ουσ.]</b> διαπραγματευτής ή πωλητής που επιμένει στις αρχικές του απαιτήσεις (με την ελπίδα για κάτι καλύτερο)
 
 
       </idx:entry>
@@ -90005,6 +89996,15 @@
           <idx:orth>homestead|homesteads</idx:orth><idx:key key="homestead|homesteads">
         </h2>
         [Ουσ.] αγροικία, φάρμα.
+
+
+      </idx:entry>
+      <mbp:pagebreak/>
+            <idx:entry name="word" scriptable="yes">
+        <h2>
+          <idx:orth>hometown|hometowns</idx:orth><idx:key key="hometown|hometowns">
+        </h2>
+        [Ουσ.] ιδιαίτερη πατρίδα, τόπος όπου γεννήθηκε και μεγάλωσε κάποιος,
 
 
                 </mbp:frameset>
