--- a/html/MyEnglishGreekDict2.html
+++ b/html/MyEnglishGreekDict2.html
@@ -11,15 +11,6 @@
       <mbp:pagebreak/>
       <idx:entry name="word" scriptable="yes">
         <h2>
-          <idx:orth>hometown|hometowns</idx:orth><idx:key key="hometown|hometowns">
-        </h2>
-        <b>[Ουσ.]</b> ιδιαίτερη πατρίδα, τόπος όπου γεννήθηκε και μεγάλωσε κάποιος,
-
-
-      </idx:entry>
-      <mbp:pagebreak/>
-            <idx:entry name="word" scriptable="yes">
-        <h2>
           <idx:orth>homeward</idx:orth><idx:key key="homeward">
         </h2>
         <b>[Επίρρ.]</b> προς το σπίτι, προς την πατρίδα
@@ -1291,7 +1282,7 @@
         <h2>
           <idx:orth>hosanna</idx:orth><idx:key key="hosanna">
         </h2>
-        [<b>[Επιφ.]</b>] ωσαννά, δυνατή κραυγή - προσευχή προς τον Κύριο
+        <b>[Επιφ.]</b> ωσαννά, δυνατή κραυγή - προσευχή προς τον Κύριο
 
 
       </idx:entry>
@@ -2731,7 +2722,7 @@
         <h2>
           <idx:orth>hullo</idx:orth><idx:key key="hullo">
         </h2>
-        [<b>[Επιφ.]</b>] γεια ▪ ε! σύ
+        <b>[Επιφ.]</b> γεια ▪ ε! σύ
 
 
       </idx:entry>
@@ -9031,7 +9022,7 @@
         <h2>
           <idx:orth>imponderable|imponderables</idx:orth><idx:key key="imponderable|imponderables">
         </h2>
-        αστάθμητος (παράγων), οτιδήποτε δεν εκτιμήθηκε - ελήφθη σωστά υπόψιν.▪ αστάθμητος
+        αστάθμητος (παράγων), οτιδήποτε δεν εκτιμήθηκε - ελήφθη σωστά υπόψιν ▪ αστάθμητος
 
 
       </idx:entry>
@@ -10147,7 +10138,7 @@
         <h2>
           <idx:orth>in abundance</idx:orth><idx:key key="in abundance">
         </h2>
-        Εμ<b>[Πρόθ.]</b> σε αφθονία, σε μεγάλη ποσότητα
+        Εμ<b><b>[Πρόθ.]</b></b> σε αφθονία, σε μεγάλη ποσότητα
 
 
       </idx:entry>
@@ -10183,7 +10174,7 @@
         <h2>
           <idx:orth>in addition to</idx:orth><idx:key key="in addition to">
         </h2>
-        Εμ<b>[Πρόθ.]</b> πάνω από ▪ εκτός του...,  Πχ: In addition to our extensive selection, our prices are the best you can find.
+        Εμ<b><b>[Πρόθ.]</b></b> πάνω από ▪ εκτός του...,  Πχ: In addition to our extensive selection, our prices are the best you can find.
 
 
       </idx:entry>
@@ -11488,7 +11479,7 @@
         <h2>
           <idx:orth>in public</idx:orth><idx:key key="in public">
         </h2>
-        Εμ<b>[Πρόθ.]</b> δημόσια, μπροστά σε όλους
+        Εμ<b><b>[Πρόθ.]</b></b> δημόσια, μπροστά σε όλους
 
 
       </idx:entry>
@@ -11812,7 +11803,7 @@
         <h2>
           <idx:orth>in style</idx:orth><idx:key key="in style">
         </h2>
-        Εμ<b>[Πρόθ.]</b> με στυλ, κομψά, με τη μόδα
+        Εμ<b><b>[Πρόθ.]</b></b> με στυλ, κομψά, με τη μόδα
 
 
       </idx:entry>
@@ -11821,7 +11812,7 @@
         <h2>
           <idx:orth>in succession</idx:orth><idx:key key="in succession">
         </h2>
-        Εμ<b>[Πρόθ.]</b> σε επάλληλη σειρά, ακολουθώντας ο ένας τον άλλο, με σειρά
+        Εμ<b><b>[Πρόθ.]</b></b> σε επάλληλη σειρά, ακολουθώντας ο ένας τον άλλο, με σειρά
 
 
       </idx:entry>
@@ -12640,7 +12631,7 @@
         <h2>
           <idx:orth>in twos</idx:orth><idx:key key="in twos">
         </h2>
-        Εμ<b>[Πρόθ.]</b> σε ζευγάρια, σε ομάδες των δύο
+        Εμ<b><b>[Πρόθ.]</b></b> σε ζευγάρια, σε ομάδες των δύο
 
 
       </idx:entry>
@@ -21775,7 +21766,7 @@
         <h2>
           <idx:orth>instrumental</idx:orth><idx:key key="instrumental">
         </h2>
-        <b>[Επίθ.]</b> που συντελεί, που συμβάλλει, χρήσιμος ▪ οργανικός (μ<b>[Ουσ.]</b>)
+        <b>[Επίθ.]</b> που συντελεί, που συμβάλλει, χρήσιμος ▪ οργανικός <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -22900,7 +22891,7 @@
         <h2>
           <idx:orth>inter|interred</idx:orth><idx:key key="inter|interred">
         </h2>
-        <b>[Ρήμ.]</b> θάπτω, ενταφιάζω ▪ <b>[Πρόθ.]</b> μεταξύ
+        <b>[Ρήμ.]</b> θάπτω, ενταφιάζω ▪ <b><b>[Πρόθ.]</b></b> μεταξύ
 
 
       </idx:entry>
@@ -24763,7 +24754,7 @@
         <h2>
           <idx:orth>into</idx:orth><idx:key key="into">
         </h2>
-        <b>[Πρόθ.]</b> σε, μέσα σε, (<b>[Πρόθ.]</b> δηλώνει κίνηση προς τα μέσα). πχ: Go into the garden.
+        <b><b>[Πρόθ.]</b></b> σε, μέσα σε, (<b><b>[Πρόθ.]</b></b> δηλώνει κίνηση προς τα μέσα). πχ: Go into the garden.
 
 
       </idx:entry>
@@ -25789,7 +25780,7 @@
         <h2>
           <idx:orth>invert</idx:orth><idx:key key="invert">
         </h2>
-        <b>[Ρήμ.]</b> αντιστρέφω ▪ αναποδογυρίζω ▪ ομοφυλόφιλος (<b>[Ουσ.]</b>)
+        <b>[Ρήμ.]</b> αντιστρέφω ▪ αναποδογυρίζω ▪ ομοφυλόφιλος <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -27400,7 +27391,7 @@
         <h2>
           <idx:orth>irrespective</idx:orth><idx:key key="irrespective">
         </h2>
-        <b>[Πρόθ.]</b> ανεξαρτήτως, ασχέτως,
+        <b><b>[Πρόθ.]</b></b> ανεξαρτήτως, ασχέτως,
 
 
       </idx:entry>
@@ -27409,7 +27400,7 @@
         <h2>
           <idx:orth>irrespective of</idx:orth><idx:key key="irrespective of">
         </h2>
-        <b>[Πρόθ.]</b> συν. ανεξαρτήτως με..., ασχέτως με...
+        <b><b>[Πρόθ.]</b></b> συν. ανεξαρτήτως με..., ασχέτως με...
 
 
       </idx:entry>
@@ -35410,7 +35401,7 @@
         <h2>
           <idx:orth>knock about|knocked about|knocking about|knocks about</idx:orth><idx:key key="knock about|knocked about|knocking about|knocks about">
         </h2>
-        παραδέρνω, περιπλανιέμαι, ζώ άτακτα, έχω ερωτικές σχέσεις.▪ αλήτης, θορυβώδης.
+        παραδέρνω, περιπλανιέμαι, ζώ άτακτα, έχω ερωτικές σχέσεις ▪ αλήτης, θορυβώδης.
 
 
       </idx:entry>
@@ -36391,7 +36382,7 @@
         <h2>
           <idx:orth>la</idx:orth><idx:key key="la">
         </h2>
-        <b>[Ουσ.]</b> η νότα λά (μ<b>[Ουσ.]</b>)
+        <b>[Ουσ.]</b> η νότα λά <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -36913,7 +36904,7 @@
         <h2>
           <idx:orth>lackaday</idx:orth><idx:key key="lackaday">
         </h2>
-        [<b>[Επιφ.]</b>] αλίμονο! αλι!
+        <b>[Επιφ.]</b> αλίμονο! αλι!
 
 
       </idx:entry>
@@ -40576,7 +40567,7 @@
         <h2>
           <idx:orth>leading</idx:orth><idx:key key="leading">
         </h2>
-        <b>[Επίθ.]</b> που ηγείται, ηγετικός, που οδηγεί ▪ σημαντικός, κύριος, σημαίνων▪ παραπειστικός <b>[Ουσ.]</b> μολύβδωση, απόσταση μεταξύ γραμμών κειμένου, διάστιχο.▪ η αρχηγία, το να ηγείται κάποιος
+        <b>[Επίθ.]</b> που ηγείται, ηγετικός, που οδηγεί ▪ σημαντικός, κύριος, σημαίνων▪ παραπειστικός <b>[Ουσ.]</b> μολύβδωση, απόσταση μεταξύ γραμμών κειμένου, διάστιχο ▪ η αρχηγία, το να ηγείται κάποιος
 
 
       </idx:entry>
@@ -42826,7 +42817,7 @@
         <h2>
           <idx:orth>less</idx:orth><idx:key key="less">
         </h2>
-        <b>[Επίρρ.]</b> λιγότερο, πιο λίγο <b>[Επίθ.]</b> λιγότερος, μικρότερος <b>[Ουσ.]</b>  το λιγότερο <b>[Πρόθ.]</b> μείον. αφαιρώντας, χωρίς...
+        <b>[Επίρρ.]</b> λιγότερο, πιο λίγο <b>[Επίθ.]</b> λιγότερος, μικρότερος <b>[Ουσ.]</b>  το λιγότερο <b><b>[Πρόθ.]</b></b> μείον. αφαιρώντας, χωρίς...
 
 
       </idx:entry>
@@ -48757,7 +48748,7 @@
         <h2>
           <idx:orth>look out|looked out|looking out|looks out</idx:orth><idx:key key="look out|looked out|looking out|looks out">
         </h2>
-        πρόσεξε! ▪κοιτάζω έξω ▪ είμαι προσεκτικός, προσέχω ▪ παρακολούθηση, φρούρηση, επιτήρηση.▪ φυλάξου! προσοχή! ▪ παραφύλαγμα ▪ τσιλιαδόρος.
+        πρόσεξε! ▪κοιτάζω έξω ▪ είμαι προσεκτικός, προσέχω ▪ παρακολούθηση, φρούρηση, επιτήρηση ▪ φυλάξου! προσοχή! ▪ παραφύλαγμα ▪ τσιλιαδόρος.
 
 
       </idx:entry>
@@ -51835,7 +51826,7 @@
         <h2>
           <idx:orth>macro|macros</idx:orth><idx:key key="macro|macros">
         </h2>
-        <b>[Ουσ.]</b> μακροεντολή (Η/Υ), σειρά εντολών που εκτελούνται διαδοχικά σαν πρόγραμμα ▪ <b>[Πρόθ.]</b> μακρυ-, μεγάλο-
+        <b>[Ουσ.]</b> μακροεντολή (Η/Υ), σειρά εντολών που εκτελούνται διαδοχικά σαν πρόγραμμα ▪ <b><b>[Πρόθ.]</b></b> μακρυ-, μεγάλο-
 
 
       </idx:entry>
@@ -54337,7 +54328,7 @@
         <h2>
           <idx:orth>mamma mia</idx:orth><idx:key key="mamma mia">
         </h2>
-        [<b>[Επιφ.]</b>] έκφρ. μανούλα μου, (έκφραση έκπληξης)
+        <b>[Επιφ.]</b> έκφρ. μανούλα μου, (έκφραση έκπληξης)
 
 
       </idx:entry>
@@ -58000,7 +57991,7 @@
         <h2>
           <idx:orth>maugre</idx:orth><idx:key key="maugre">
         </h2>
-        <b>[Πρόθ.]</b> παρ' όλο ότι...
+        <b><b>[Πρόθ.]</b></b> παρ' όλο ότι...
 
 
       </idx:entry>
@@ -59557,7 +59548,7 @@
         <h2>
           <idx:orth>medley|medleys</idx:orth><idx:key key="medley|medleys">
         </h2>
-        <b>[Ουσ.]</b> κυκεώνας, συνονθύλευμα ▪ ανακατεμένα είδη μουσικής, πότ πουρί (μ<b>[Ουσ.]</b>) πχ: A medley of furniture, Chinese and Western.
+        <b>[Ουσ.]</b> κυκεώνας, συνονθύλευμα ▪ ανακατεμένα είδη μουσικής, πότ πουρί <b>[Ουσ.]</b> πχ: A medley of furniture, Chinese and Western.
 
 
       </idx:entry>
@@ -60007,7 +59998,7 @@
         <h2>
           <idx:orth>melody|melodies</idx:orth><idx:key key="melody|melodies">
         </h2>
-        <b>[Ουσ.]</b> μελωδία, ευχάριστος σκοπός (μ<b>[Ουσ.]</b>)
+        <b>[Ουσ.]</b> μελωδία, ευχάριστος σκοπός <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -62230,7 +62221,7 @@
         <h2>
           <idx:orth>mid</idx:orth><idx:key key="mid">
         </h2>
-        <b>[Επίθ.]</b> μέσος, μεσαίος ▪ <b>[Πρόθ.]</b> στη μέση το μεσαίο τμήμα του...
+        <b>[Επίθ.]</b> μέσος, μεσαίος ▪ <b><b>[Πρόθ.]</b></b> στη μέση το μεσαίο τμήμα του...
 
 
       </idx:entry>
@@ -63940,7 +63931,7 @@
         <h2>
           <idx:orth>mini|minis</idx:orth><idx:key key="mini|minis">
         </h2>
-        <b>[Πρόθ.]</b> μικρο- ▪ <b>[Επίθ.]</b> πολύ μικρός, μικροσκοπικός ▪ <b>[Ουσ.]</b> πολύ κοντή φούστα, μίνι
+        <b><b>[Πρόθ.]</b></b> μικρο- ▪ <b>[Επίθ.]</b> πολύ μικρός, μικροσκοπικός ▪ <b>[Ουσ.]</b> πολύ κοντή φούστα, μίνι
 
 
       </idx:entry>
@@ -68602,7 +68593,7 @@
         <h2>
           <idx:orth>more's the pity</idx:orth><idx:key key="more's the pity">
         </h2>
-        [<b>[Επιφ.]</b>] έκφρ. δυστυχώς!
+        <b>[Επιφ.]</b> έκφρ. δυστυχώς!
 
 
       </idx:entry>
@@ -72661,7 +72652,7 @@
         <h2>
           <idx:orth>my goodness</idx:orth><idx:key key="my goodness">
         </h2>
-        [<b>[Επιφ.]</b>] έκφρ. θεέ μου!!!, Χριστός και Παναγία!!!, Χριστός και Απόστολος!!!
+        <b>[Επιφ.]</b> έκφρ. θεέ μου!!!, Χριστός και Παναγία!!!, Χριστός και Απόστολος!!!
 
 
       </idx:entry>
@@ -75001,7 +74992,7 @@
         <h2>
           <idx:orth>near|neared|nearing|nears</idx:orth><idx:key key="near|neared|nearing|nears">
         </h2>
-        <b>[Επίρρ.]</b> πλησίον, κοντά (τοπικά ή χρονικά), περίπου ▪ <b>[Επίθ.]</b> κοντινός, πλησίον▪ που βρίσκεται στην αριστερή πλευρά ▪ <b>[Ρήμ.]</b> πλησιάζω, προσεγγίζω (χρόνο ή τόπο) <b>[Πρόθ.]</b> σε μικρή απόσταση, σε κοντινή απόσταση
+        <b>[Επίρρ.]</b> πλησίον, κοντά (τοπικά ή χρονικά), περίπου ▪ <b>[Επίθ.]</b> κοντινός, πλησίον▪ που βρίσκεται στην αριστερή πλευρά ▪ <b>[Ρήμ.]</b> πλησιάζω, προσεγγίζω (χρόνο ή τόπο) <b><b>[Πρόθ.]</b></b> σε μικρή απόσταση, σε κοντινή απόσταση
 
 
       </idx:entry>
@@ -78727,7 +78718,7 @@
         <h2>
           <idx:orth>ninth|ninths</idx:orth><idx:key key="ninth|ninths">
         </h2>
-        ένατος ▪ ένατο, το 1/9▪ ενάτη (μ<b>[Ουσ.]</b>)
+        ένατος ▪ ένατο, το 1/9▪ ενάτη <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -81697,7 +81688,7 @@
         <h2>
           <idx:orth>notwithstanding</idx:orth><idx:key key="notwithstanding">
         </h2>
-        <b>[Πρόθ.]</b> παρά, σε πεισμα του... <b>[Σύνδ.]</b> μολονότι, αν και
+        <b><b>[Πρόθ.]</b></b> παρά, σε πεισμα του... <b>[Σύνδ.]</b> μολονότι, αν και
 
 
       </idx:entry>
@@ -84865,7 +84856,7 @@
         <h2>
           <idx:orth>of</idx:orth><idx:key key="of">
         </h2>
-        <b>[Πρόθ.]</b> από, παρά, εκ, εξ, περί, του ▪ λόγω, εξαιτίας ▪ σχετικά με... (γενικότερα χρησιμοποιείται ως προθεση για το σχηματισμό της γενικής πτώσης) πχ: He sent me a box of books
+        <b><b>[Πρόθ.]</b></b> από, παρά, εκ, εξ, περί, του ▪ λόγω, εξαιτίας ▪ σχετικά με... (γενικότερα χρησιμοποιείται ως προθεση για το σχηματισμό της γενικής πτώσης) πχ: He sent me a box of books
 
 
       </idx:entry>
@@ -84892,7 +84883,7 @@
         <h2>
           <idx:orth>of a piece</idx:orth><idx:key key="of a piece">
         </h2>
-        Εμ<b>[Πρόθ.]</b> του ίδιου τύπου, του αυτού είδους
+        Εμ<b><b>[Πρόθ.]</b></b> του ίδιου τύπου, του αυτού είδους
 
 
       </idx:entry>
@@ -86530,7 +86521,7 @@
         <h2>
           <idx:orth>omni</idx:orth><idx:key key="omni">
         </h2>
-        <b>[Πρόθ.]</b> όλοι, οτιδήποτε
+        <b><b>[Πρόθ.]</b></b> όλοι, οτιδήποτε
 
 
       </idx:entry>
@@ -86845,7 +86836,7 @@
         <h2>
           <idx:orth>on duty</idx:orth><idx:key key="on duty">
         </h2>
-        Εμ<b>[Πρόθ.]</b> σε υπηρεσία, σε εργασία
+        Εμ<b><b>[Πρόθ.]</b></b> σε υπηρεσία, σε εργασία
 
 
       </idx:entry>
@@ -87061,7 +87052,7 @@
         <h2>
           <idx:orth>on probation</idx:orth><idx:key key="on probation">
         </h2>
-        Εμ<b>[Πρόθ.]</b> σε δοκιμαστική περίοδο ▪ ελεύθερος από τιμωρία υπό προϋποθέσεις
+        Εμ<b><b>[Πρόθ.]</b></b> σε δοκιμαστική περίοδο ▪ ελεύθερος από τιμωρία υπό προϋποθέσεις
 
 
       </idx:entry>
@@ -89842,7 +89833,7 @@
         <h2>
           <idx:orth>optical drive|optical drives</idx:orth><idx:key key="optical drive|optical drives">
         </h2>
-        [Λεκτ. συν.] συσκευή ανάγνωσης οπτικών δίσκων (CD, DVD, Blue Ray κτλ.)
+        <b>[Λεκτ. συν.]</b> συσκευή ανάγνωσης οπτικών δίσκων (CD, DVD, Blue Ray κτλ.)
 
 
       </idx:entry>
@@ -90005,6 +89996,15 @@
           <idx:orth>optionally</idx:orth><idx:key key="optionally">
         </h2>
         [Επίρρ.] προαιρετικά.
+
+
+      </idx:entry>
+      <mbp:pagebreak/>
+            <idx:entry name="word" scriptable="yes">
+        <h2>
+          <idx:orth>optometrist|optometrists</idx:orth><idx:key key="optometrist|optometrists">
+        </h2>
+        [Ουσ.] ο ειδικός στην μέτρηση της οπτικής οξύτητας, οπτικός
 
 
                 </mbp:frameset>
