--- a/html/MyEnglishGreekDict3.html
+++ b/html/MyEnglishGreekDict3.html
@@ -11,15 +11,6 @@
       <mbp:pagebreak/>
       <idx:entry name="word" scriptable="yes">
         <h2>
-          <idx:orth>optometrist|optometrists</idx:orth><idx:key key="optometrist|optometrists">
-        </h2>
-        <b>[Ουσ.]</b> ο ειδικός στην μέτρηση της οπτικής οξύτητας, οπτικός
-
-
-      </idx:entry>
-      <mbp:pagebreak/>
-            <idx:entry name="word" scriptable="yes">
-        <h2>
           <idx:orth>opulent</idx:orth><idx:key key="opulent">
         </h2>
         <b>[Επίθ.]</b> πλούσιος, άφθονος ▪ πολυτελής
@@ -1615,7 +1606,7 @@
         <h2>
           <idx:orth>other than</idx:orth><idx:key key="other than">
         </h2>
-        <b>[Πρόθ.]</b> εκτός από...,
+        <b><b>[Πρόθ.]</b></b> εκτός από...,
 
 
       </idx:entry>
@@ -3388,7 +3379,7 @@
         <h2>
           <idx:orth>outright</idx:orth><idx:key key="outright">
         </h2>
-        <b>[Επίρρ.]</b> ολοσχερώς, τελείως, ολοκληρωτικά, εντελώς, τελείως.▪ μονομιάς, αμέσως, κατευθείαν ▪ απερίφραστα, ξάστερα, καθαρά <b>[Επίθ.]</b>  τέλειος, ολοκληρωτικός ▪ ειλικρινής, ντόμπρος, ίσιος
+        <b>[Επίρρ.]</b> ολοσχερώς, τελείως, ολοκληρωτικά, εντελώς, τελείως ▪ μονομιάς, αμέσως, κατευθείαν ▪ απερίφραστα, ξάστερα, καθαρά <b>[Επίθ.]</b>  τέλειος, ολοκληρωτικός ▪ ειλικρινής, ντόμπρος, ίσιος
 
 
       </idx:entry>
@@ -3955,7 +3946,7 @@
         <h2>
           <idx:orth>over</idx:orth><idx:key key="over">
         </h2>
-        <b>[Επίθ.]</b> τελειωμένος, ολοκληρωμένος <b>[Επίρρ.]</b> πάνω, πάνω από, από πάνω, επί ▪ απέναντι, αντίπερα ▪ περισσότερα από ▪ κατά τη διάρκεια ▪ ανάποδα, ανάσκελα <b>[Πρόθ.]</b> υπέρ. πάνω από
+        <b>[Επίθ.]</b> τελειωμένος, ολοκληρωμένος <b>[Επίρρ.]</b> πάνω, πάνω από, από πάνω, επί ▪ απέναντι, αντίπερα ▪ περισσότερα από ▪ κατά τη διάρκεια ▪ ανάποδα, ανάσκελα <b><b>[Πρόθ.]</b></b> υπέρ. πάνω από
 
 
       </idx:entry>
@@ -5323,7 +5314,7 @@
         <h2>
           <idx:orth>owing to</idx:orth><idx:key key="owing to">
         </h2>
-        <b>[Πρόθ.]</b> εξαιτίας του..., λόγω του...
+        <b><b>[Πρόθ.]</b></b> εξαιτίας του..., λόγω του...
 
 
       </idx:entry>
@@ -10147,7 +10138,7 @@
         <h2>
           <idx:orth>past|pasts</idx:orth><idx:key key="past|pasts">
         </h2>
-        <b>[Επίθ.]</b> παρελθών, περασμένος, που αναφέρεται στο παρελθόν▪ προηγούμενος, τέως <b>[Ουσ.]</b> το παρελθόν, τα περασμένα,  <b>[Επίρρ.]</b> μετά, έπειτα από, μετά από <b>[Πρόθ.]</b> πέρα από, επέκεινα
+        <b>[Επίθ.]</b> παρελθών, περασμένος, που αναφέρεται στο παρελθόν▪ προηγούμενος, τέως <b>[Ουσ.]</b> το παρελθόν, τα περασμένα,  <b>[Επίρρ.]</b> μετά, έπειτα από, μετά από <b><b>[Πρόθ.]</b></b> πέρα από, επέκεινα
 
 
       </idx:entry>
@@ -13153,7 +13144,7 @@
         <h2>
           <idx:orth>pending</idx:orth><idx:key key="pending">
         </h2>
-        <b>[Επίθ.]</b> εκκρεμής, που βρίσκεται σε εκκρεμότητα ▪ που κρέμεται, <b>[Πρόθ.]</b> εν αναμονή του..., περιμένοντας...,  κατά τη διάρκεια..., μέχρι...
+        <b>[Επίθ.]</b> εκκρεμής, που βρίσκεται σε εκκρεμότητα ▪ που κρέμεται, <b><b>[Πρόθ.]</b></b> εν αναμονή του..., περιμένοντας...,  κατά τη διάρκεια..., μέχρι...
 
 
       </idx:entry>
@@ -13900,7 +13891,7 @@
         <h2>
           <idx:orth>per</idx:orth><idx:key key="per">
         </h2>
-        <b>[Πρόθ.]</b> ανά, δια, μέσω, κάτά
+        <b><b>[Πρόθ.]</b></b> ανά, δια, μέσω, κάτά
 
 
       </idx:entry>
@@ -17158,7 +17149,7 @@
         <h2>
           <idx:orth>phew</idx:orth><idx:key key="phew">
         </h2>
-        [<b>[Επιφ.]</b>] πούφ!, (εκφράζει αποστροφή, ανακούφιση ή κούραση)
+        <b>[Επιφ.]</b> πούφ!, (εκφράζει αποστροφή, ανακούφιση ή κούραση)
 
 
       </idx:entry>
@@ -18346,7 +18337,7 @@
         <h2>
           <idx:orth>piano|pianos</idx:orth><idx:key key="piano|pianos">
         </h2>
-        <b>[Ουσ.]</b> πιάνο, κλειδοκύμβαλο ▪ (μουσική) για πιάνο, απαλά, σιγαλά (μ<b>[Ουσ.]</b>)
+        <b>[Ουσ.]</b> πιάνο, κλειδοκύμβαλο ▪ (μουσική) για πιάνο, απαλά, σιγαλά <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -19939,7 +19930,7 @@
         <h2>
           <idx:orth>pish</idx:orth><idx:key key="pish">
         </h2>
-        [<b>[Επιφ.]</b>] πισσ!!, πουφ!!, (έκφραση περιφρόνησης)
+        <b>[Επιφ.]</b> πισσ!!, πουφ!!, (έκφραση περιφρόνησης)
 
 
       </idx:entry>
@@ -22252,7 +22243,7 @@
         <h2>
           <idx:orth>plenty|plenties</idx:orth><idx:key key="plenty|plenties">
         </h2>
-        <b>[Ουσ.]</b> αφθονία, πλήθος (αγαθών), πλούτος ▪ αρκετή ποσότητα, μπόλικη ποσότητα <b>[Επίθ.]</b> άφθονος, που υπάρχει σε μεγάλη ποσότητα <b>[Πρόθ.]</b> σε αφθονία, σε αρκετή ποσότητα, σε μεγάλο βαθμό
+        <b>[Ουσ.]</b> αφθονία, πλήθος (αγαθών), πλούτος ▪ αρκετή ποσότητα, μπόλικη ποσότητα <b>[Επίθ.]</b> άφθονος, που υπάρχει σε μεγάλη ποσότητα <b><b>[Πρόθ.]</b></b> σε αφθονία, σε αρκετή ποσότητα, σε μεγάλο βαθμό
 
 
       </idx:entry>
@@ -22837,7 +22828,7 @@
         <h2>
           <idx:orth>plus|pluses</idx:orth><idx:key key="plus|pluses">
         </h2>
-        <b>[Ουσ.]</b> το σύν (+), το επί πλέον▪ το θετικό στοιχείο, το αβαντάζ <b>[Πρόθ.]</b> συν, και <b>[Επίθ.]</b> πρόσθετος, επί πλέον▪ έκτακτος ▪ θετικός
+        <b>[Ουσ.]</b> το σύν (+), το επί πλέον▪ το θετικό στοιχείο, το αβαντάζ <b><b>[Πρόθ.]</b></b> συν, και <b>[Επίθ.]</b> πρόσθετος, επί πλέον▪ έκτακτος ▪ θετικός
 
 
       </idx:entry>
@@ -31954,7 +31945,7 @@
         <h2>
           <idx:orth>prithee</idx:orth><idx:key key="prithee">
         </h2>
-        [<b>[Επιφ.]</b>] παρακαλώ (αρχ.)
+        <b>[Επιφ.]</b> παρακαλώ (αρχ.)
 
 
       </idx:entry>
@@ -32350,7 +32341,7 @@
         <h2>
           <idx:orth>pro|pros</idx:orth><idx:key key="pro|pros">
         </h2>
-        <b>[Πρόθ.]</b> υπερ ▪ αντί ▪ σε <b>[Ουσ.]</b> ο επαγγελματίας, όχι ερασιτέχνης ▪ πόρνη, πρόστυχη (αργκό)
+        <b><b>[Πρόθ.]</b></b> υπερ ▪ αντί ▪ σε <b>[Ουσ.]</b> ο επαγγελματίας, όχι ερασιτέχνης ▪ πόρνη, πρόστυχη (αργκό)
 
 
       </idx:entry>
@@ -42934,7 +42925,7 @@
         <h2>
           <idx:orth>ramp|ramped|ramping|ramps</idx:orth><idx:key key="ramp|ramped|ramping|ramps">
         </h2>
-        <b>[Ουσ.]</b> ράμπα ▪ σκάλα επιβίβασης αεροπλάνου κτλ.▪ βίαιη συμπεριφορά <b>[Ρήμ.]</b> στέκομαι ή συμπεριφέρομαι απειλητικά ▪ προμηθεύω ράμπα ▪ ανεβάζω τις τιμές (για να αισχροκερδίσω), ανατιμώ υπερβολικά
+        <b>[Ουσ.]</b> ράμπα ▪ σκάλα επιβίβασης αεροπλάνου κτλ ▪ βίαιη συμπεριφορά <b>[Ρήμ.]</b> στέκομαι ή συμπεριφέρομαι απειλητικά ▪ προμηθεύω ράμπα ▪ ανεβάζω τις τιμές (για να αισχροκερδίσω), ανατιμώ υπερβολικά
 
 
       </idx:entry>
@@ -43618,7 +43609,7 @@
         <h2>
           <idx:orth>rather than</idx:orth><idx:key key="rather than">
         </h2>
-        <b>[Σύνδ.]</b> και όχι <b>[Πρόθ.]</b> προκειμένου να...▪ αντί του...
+        <b>[Σύνδ.]</b> και όχι <b><b>[Πρόθ.]</b></b> προκειμένου να...▪ αντί του...
 
 
       </idx:entry>
@@ -43654,7 +43645,7 @@
         <h2>
           <idx:orth>rating|ratings</idx:orth><idx:key key="rating|ratings">
         </h2>
-        <b>[Ουσ.]</b> αξιολόγηση, διαβάθμιση, διατίμηση ▪ ποσοστό ακροαματικότητας κτλ.▪ κατηγορία, κατσάδιασμα
+        <b>[Ουσ.]</b> αξιολόγηση, διαβάθμιση, διατίμηση ▪ ποσοστό ακροαματικότητας κτλ ▪ κατηγορία, κατσάδιασμα
 
 
       </idx:entry>
@@ -47056,7 +47047,7 @@
         <h2>
           <idx:orth>rector|rectors</idx:orth><idx:key key="rector|rectors">
         </h2>
-        <b>[Ουσ.]</b> διευθυντής σχολείου, πρύτανης πανεπιστημίου κτλ.▪ πρωτοπρεσβύτερος (σε ρωμαιοκαθολική εκκλησία), εφημέριος (σε αγγλικανική εκκλησία)
+        <b>[Ουσ.]</b> διευθυντής σχολείου, πρύτανης πανεπιστημίου κτλ ▪ πρωτοπρεσβύτερος (σε ρωμαιοκαθολική εκκλησία), εφημέριος (σε αγγλικανική εκκλησία)
 
 
       </idx:entry>
@@ -48901,7 +48892,7 @@
         <h2>
           <idx:orth>regarding</idx:orth><idx:key key="regarding">
         </h2>
-        <b>[Πρόθ.]</b> περί, σχετικά με..., αναφορικά με..., σε σχέση με..., όσο για..., όσον αφορά...
+        <b><b>[Πρόθ.]</b></b> περί, σχετικά με..., αναφορικά με..., σε σχέση με..., όσο για..., όσον αφορά...
 
 
       </idx:entry>
@@ -49153,7 +49144,7 @@
         <h2>
           <idx:orth>registrant|registrants</idx:orth><idx:key key="registrant|registrants">
         </h2>
-        <b>[Ουσ.]</b> ληξίαρχος.▪ υπεύθυνος για να καταχωρεί, κάποιος που καταγράφει,
+        <b>[Ουσ.]</b> ληξίαρχος ▪ υπεύθυνος για να καταχωρεί, κάποιος που καταγράφει,
 
 
       </idx:entry>
@@ -54184,7 +54175,7 @@
         <h2>
           <idx:orth>respecting</idx:orth><idx:key key="respecting">
         </h2>
-        <b>[Πρόθ.]</b> σχετικά με, αναφορικά με..., όσον αφορά...
+        <b><b>[Πρόθ.]</b></b> σχετικά με, αναφορικά με..., όσον αφορά...
 
 
       </idx:entry>
@@ -57559,7 +57550,7 @@
         <h2>
           <idx:orth>right on</idx:orth><idx:key key="right on">
         </h2>
-        [<b>[Επιφ.]</b>] εμπρός!
+        <b>[Επιφ.]</b> εμπρός!
 
 
       </idx:entry>
@@ -64345,7 +64336,7 @@
         <h2>
           <idx:orth>sans</idx:orth><idx:key key="sans">
         </h2>
-        <b>[Πρόθ.]</b> χωρίς, άνευ
+        <b><b>[Πρόθ.]</b></b> χωρίς, άνευ
 
 
       </idx:entry>
@@ -65335,7 +65326,7 @@
         <h2>
           <idx:orth>save|saved|saves|saving</idx:orth><idx:key key="save|saved|saves|saving">
         </h2>
-        <b>[Ρήμ.]</b> σώζω, γλιτώνω, διασώζω ▪ αποταμιεύω, εξοικονομώ ▪ φυλάω, διατηρώ ▪ απαλλάσω (απο κόπο, δαπάνη κτλ ▪ αποκρούω (μπάλα) <b>[Ουσ.]</b> απόκρουση τερματοφύλακα ▪ <b>[Πρόθ.]</b> εκτός, εκτός από
+        <b>[Ρήμ.]</b> σώζω, γλιτώνω, διασώζω ▪ αποταμιεύω, εξοικονομώ ▪ φυλάω, διατηρώ ▪ απαλλάσω (απο κόπο, δαπάνη κτλ ▪ αποκρούω (μπάλα) <b>[Ουσ.]</b> απόκρουση τερματοφύλακα ▪ <b><b>[Πρόθ.]</b></b> εκτός, εκτός από
 
 
       </idx:entry>
@@ -72103,7 +72094,7 @@
         <h2>
           <idx:orth>semitone|semitones</idx:orth><idx:key key="semitone|semitones">
         </h2>
-        <b>[Ουσ.]</b> ημιτόνιο (μ<b>[Ουσ.]</b>)
+        <b>[Ουσ.]</b> ημιτόνιο <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -74155,7 +74146,7 @@
         <h2>
           <idx:orth>setting|settings</idx:orth><idx:key key="setting|settings">
         </h2>
-        <b>[Ουσ.]</b> τοποθέτηση, διάταξη ▪ ρύθμιση, καθορισμός, διάταξη ▪ περιβάλλον, φόντο, σκηνικό ▪ στερεοποίηση ▪ φορά, κατεύθυνση ▪ διασκευή (μ<b>[Ουσ.]</b>)
+        <b>[Ουσ.]</b> τοποθέτηση, διάταξη ▪ ρύθμιση, καθορισμός, διάταξη ▪ περιβάλλον, φόντο, σκηνικό ▪ στερεοποίηση ▪ φορά, κατεύθυνση ▪ διασκευή <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -89842,7 +89833,7 @@
         <h2>
           <idx:orth>spare room|spare rooms</idx:orth><idx:key key="spare room|spare rooms">
         </h2>
-        [Λεκτ. συν.] δωμάτιο φιλοξενίας, δωμάτιο για επισκέπτη, άδειο - εφεδρικό δωμάτιο
+        <b>[Λεκτ. συν.]</b> δωμάτιο φιλοξενίας, δωμάτιο για επισκέπτη, άδειο - εφεδρικό δωμάτιο
 
 
       </idx:entry>
@@ -90005,6 +89996,15 @@
           <idx:orth>sparsely populated</idx:orth><idx:key key="sparsely populated">
         </h2>
         [Επίθ.] αραιοκατοικημένος
+
+
+      </idx:entry>
+      <mbp:pagebreak/>
+            <idx:entry name="word" scriptable="yes">
+        <h2>
+          <idx:orth>sparseness</idx:orth><idx:key key="sparseness">
+        </h2>
+        [Ουσ.] αραιότητα, σπανιότητα, έλλειψη
 
 
                 </mbp:frameset>
