--- a/html/MyEnglishGreekDict4.html
+++ b/html/MyEnglishGreekDict4.html
@@ -11,15 +11,6 @@
       <mbp:pagebreak/>
       <idx:entry name="word" scriptable="yes">
         <h2>
-          <idx:orth>sparseness</idx:orth><idx:key key="sparseness">
-        </h2>
-        <b>[Ουσ.]</b> αραιότητα, σπανιότητα, έλλειψη
-
-
-      </idx:entry>
-      <mbp:pagebreak/>
-            <idx:entry name="word" scriptable="yes">
-        <h2>
           <idx:orth>Sparta</idx:orth><idx:key key="Sparta">
         </h2>
         <b>[Ουσ.]</b> Σπάρτη
@@ -6763,7 +6754,7 @@
         <h2>
           <idx:orth>stick|sticking|sticks|stuck</idx:orth><idx:key key="stick|sticking|sticks|stuck">
         </h2>
-        <b>[Ουσ.]</b> ράβδος, βέργα ▪ μπαστούνι ▪ οτιδήποτε μοιάζει με ράβδο ▪ μπαγκέτα (μ<b>[Ουσ.]</b>) ▪ <b>[Ρήμ.]</b> μπήγω, χώνω ▪ συγκολλώ ▪ φρακάρω, σφηνώνω ▪ κολλάω, βάζω και μένει, κολλάω (π.χ. παρόνομα ▪ ανέχομαι
+        <b>[Ουσ.]</b> ράβδος, βέργα ▪ μπαστούνι ▪ οτιδήποτε μοιάζει με ράβδο ▪ μπαγκέτα <b>[Ουσ.]</b> ▪ <b>[Ρήμ.]</b> μπήγω, χώνω ▪ συγκολλώ ▪ φρακάρω, σφηνώνω ▪ κολλάω, βάζω και μένει, κολλάω (π.χ. παρόνομα ▪ ανέχομαι
 
 
       </idx:entry>
@@ -15142,7 +15133,7 @@
         <h2>
           <idx:orth>sure|surer|surest</idx:orth><idx:key key="sure|surer|surest">
         </h2>
-        <b>[Επίθ.]</b> σίγουρος, βέβαιος, ασφαλής ▪ βάσιμος, αξιόπιστος ▪ αληθινός, πραγματικός <b>[Επίρρ.]</b> σίγουρα, βέβαια [<b>[Επιφ.]</b>] αμέ!!, σίγουρα!!
+        <b>[Επίθ.]</b> σίγουρος, βέβαιος, ασφαλής ▪ βάσιμος, αξιόπιστος ▪ αληθινός, πραγματικός <b>[Επίρρ.]</b> σίγουρα, βέβαια <b>[Επιφ.]</b> αμέ!!, σίγουρα!!
 
 
       </idx:entry>
@@ -16474,7 +16465,7 @@
         <h2>
           <idx:orth>sweet dreams</idx:orth><idx:key key="sweet dreams">
         </h2>
-        [<b>[Επιφ.]</b>] όνειρα γλυκα!!
+        <b>[Επιφ.]</b> όνειρα γλυκα!!
 
 
       </idx:entry>
@@ -17365,7 +17356,7 @@
         <h2>
           <idx:orth>symphonically</idx:orth><idx:key key="symphonically">
         </h2>
-        <b>[Επίρρ.]</b> συμφωνικά (μ<b>[Ουσ.]</b>)
+        <b>[Επίρρ.]</b> συμφωνικά <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -17563,7 +17554,7 @@
         <h2>
           <idx:orth>syncopated</idx:orth><idx:key key="syncopated">
         </h2>
-        <b>[Επίθ.]</b> που έχει αντιστροφή έντασης των φθόγγων (μ<b>[Ουσ.]</b>)
+        <b>[Επίθ.]</b> που έχει αντιστροφή έντασης των φθόγγων <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -26167,7 +26158,7 @@
         <h2>
           <idx:orth>theme|themes</idx:orth><idx:key key="theme|themes">
         </h2>
-        <b>[Ουσ.]</b> θέμα, υπόθεση, αντικείμενο, σύνθεση ▪ κύρια έννοια, κύρια ιδέα ▪ μοτίβο (μ<b>[Ουσ.]</b>)
+        <b>[Ουσ.]</b> θέμα, υπόθεση, αντικείμενο, σύνθεση ▪ κύρια έννοια, κύρια ιδέα ▪ μοτίβο <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -37120,7 +37111,7 @@
         <h2>
           <idx:orth>triplet|triplets</idx:orth><idx:key key="triplet|triplets">
         </h2>
-        <b>[Ουσ.]</b> τριάδα ▪ τρίδυμος ▪ τρίδυμο, τρίηχο (μ<b>[Ουσ.]</b>)
+        <b>[Ουσ.]</b> τριάδα ▪ τρίδυμος ▪ τρίδυμο, τρίηχο <b>[Ουσ.]</b>
 
 
       </idx:entry>
@@ -47272,7 +47263,7 @@
         <h2>
           <idx:orth>unheard of</idx:orth><idx:key key="unheard of">
         </h2>
-        <b>[Επίθ.]</b> ανήκουστος [<b>[Επιφ.]</b>] έκφρ. ανήκουστο
+        <b>[Επίθ.]</b> ανήκουστος <b>[Επιφ.]</b> έκφρ. ανήκουστο
 
 
       </idx:entry>
@@ -60134,7 +60125,7 @@
         <h2>
           <idx:orth>viva|vivas</idx:orth><idx:key key="viva|vivas">
         </h2>
-        [<b>[Επιφ.]</b>] ζήτω! ▪ <b>[Ουσ.]</b> προφορική εξέταση σε παν/μιο (Βρεττ.)
+        <b>[Επιφ.]</b> ζήτω! ▪ <b>[Ουσ.]</b> προφορική εξέταση σε παν/μιο (Βρεττ.)
 
 
       </idx:entry>
@@ -60179,7 +60170,7 @@
         <h2>
           <idx:orth>vivat</idx:orth><idx:key key="vivat">
         </h2>
-        [<b>[Επιφ.]</b>] ζήτω!,
+        <b>[Επιφ.]</b> ζήτω!,
 
 
       </idx:entry>
@@ -65723,7 +65714,7 @@
         <h2>
           <idx:orth>welcome|welcomed|welcomes|welcoming</idx:orth><idx:key key="welcome|welcomed|welcomes|welcoming">
         </h2>
-        [<b>[Επιφ.]</b>] καλωσόρισες!!, καλώς τον!!! <b>[Επίθ.]</b> ευπρόσδεκτος, ευχάριστος, καλοδεχούμενος ▪ ελεύθερος να... <b>[Ουσ.]</b> χαιρετισμός υποδοχής, καλωσόρισμα <b>[Ρήμ.]</b> καλωσοριζω, καλοδέχομαι
+        <b>[Επιφ.]</b> καλωσόρισες!!, καλώς τον!!! <b>[Επίθ.]</b> ευπρόσδεκτος, ευχάριστος, καλοδεχούμενος ▪ ελεύθερος να... <b>[Ουσ.]</b> χαιρετισμός υποδοχής, καλωσόρισμα <b>[Ρήμ.]</b> καλωσοριζω, καλοδέχομαι
 
 
       </idx:entry>
@@ -65732,7 +65723,7 @@
         <h2>
           <idx:orth>welcome back</idx:orth><idx:key key="welcome back">
         </h2>
-        [<b>[Επιφ.]</b>] καλωσόρισες πάλι! καλώς μας ξανάρθες!
+        <b>[Επιφ.]</b> καλωσόρισες πάλι! καλώς μας ξανάρθες!
 
 
       </idx:entry>
@@ -75812,7 +75803,7 @@
         <h2>
           <idx:orth>yup</idx:orth><idx:key key="yup">
         </h2>
-        [<b>[Επιφ.]</b>] ναι!
+        <b>[Επιφ.]</b> ναι!
 
 
       </idx:entry>
